# PipeScope

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  action.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: analyzers.md  ci-cd.md  configuration.md  contributing.md  getting-started.md  index.md
docs/demo/: README.md  lineagescope-demo.cast  pipescope-demo.cast
docs/stylesheets/: extra.css
lineagescope/: __init__.py  cli.py  graph.py  models.py  scanner.py
lineagescope/analyzers/: __init__.py  complexity.py  contracts.py  cost_hotspots.py  dead_assets.py  doc_coverage.py  ownership.py  test_coverage.py
lineagescope/parsers/: __init__.py  airflow_parser.py  dbt_parser.py  odcs_parser.py  spark_parser.py  sql_parser.py
lineagescope/reporters/: __init__.py  html_report.py  json_report.py  terminal.py
lineagescope/templates/: report.html.j2
pipescope/: __init__.py  cli.py  graph.py  models.py  scanner.py
pipescope/analyzers/: __init__.py  complexity.py  contracts.py  cost_hotspots.py  dead_assets.py  doc_coverage.py  ownership.py  test_coverage.py
pipescope/parsers/: __init__.py  airflow_parser.py  dbt_parser.py  spark_parser.py  sql_parser.py
pipescope/reporters/: __init__.py  html_report.py  json_report.py  terminal.py
pipescope/templates/: report.html.j2
real-project-tests/: CLONE_AND_SCAN.md  VALIDATION.md  run_validation.py
real-project-tests/results/: airflow_example_dags_summary.json  dbt_artifacts_summary.json  dbt_project_evaluator_summary.json  index.json  jaffle_shop_summary.json  spark_examples_summary.json
scripts/: docker_asciinema_demo_env.sh  enter-docker-demo-env.ps1  generate_demo_gif.py
tests/: __init__.py  test_airflow_parser.py  test_analyzers.py  test_cli.py  test_complexity_analyzer.py  test_contracts_analyzer.py  test_cost_hotspots_analyzer.py  test_dbt_parser.py  test_dead_assets.py  test_doc_coverage_analyzer.py  test_graph.py  test_html_report.py  test_json_report.py  test_models.py  test_odcs_parser.py  test_ownership_analyzer.py  test_pipeline_graph.py  test_scanner.py  test_spark_parser.py  test_sql_parser.py  test_test_coverage_analyzer.py
tests/fixtures/: airflow_sample_dag.py  spark_sample_job.py
tests/fixtures/dbt_sample/: dbt_project.yml
tests/fixtures/dbt_sample/models/: fct_sessions.sql  schema.yml  stg_events.sql
tests/fixtures/scanner_sample/adhoc/: a.sql  b.sql  c.sql
tests/fixtures/scanner_sample/airflow/dags/: sample_dag.py
tests/fixtures/scanner_sample/contracts/: orders_v1.yaml
tests/fixtures/scanner_sample/dbt_project/: dbt_project.yml
tests/fixtures/scanner_sample/dbt_project/models/: schema.yml
tests/fixtures/scanner_sample/dbt_project/models/marts/: fct_revenue.sql
tests/fixtures/scanner_sample/dbt_project/models/staging/: stg_orders.sql
tests/fixtures/scanner_sample/spark/: batch_job.py
