[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipescope"
version = "0.1.1"
description = "Universal static analyzer for data pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Kiran", email = "kiran.m.narayana@gmail.com" }]
keywords = ["data-engineering", "lineage", "dbt", "airflow", "static-analysis"]
dependencies = [
    "sqlglot>=26.0",
    "networkx>=3.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "gitpython>=3.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.0",
    "Pillow>=10.0",
]

[project.urls]
Repository = "https://github.com/kirannarayanak/PipeScope"
Changelog = "https://github.com/kirannarayanak/PipeScope/blob/main/CHANGELOG.md"

[project.scripts]
pipescope = "pipescope.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pipescope"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["pipescope"]
strict = false
warn_return_any = true
warn_unused_ignores = true
